Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -2,25 +2,28 @@
 <html lang="en">
 <head>
         <meta charset="utf-8" />
-        <title>My Embedded Electronics Blog</title>
-        <link rel="stylesheet" href="./theme/css/main.css" />
+        <title>My Embedded Electronics Blog - Tags</title>
+        <link rel="stylesheet" href="https://sdaglish.github.io/theme/css/main.css" />
+        <link href="https://sdaglish.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="My Embedded Electronics Blog Atom Feed" />
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="./">My Embedded Electronics Blog</a></h1>
+                <h1><a href="https://sdaglish.github.io/">My Embedded Electronics Blog</a></h1>
                 <nav><ul>
-                    <li><a href="./category/misc.html">misc</a></li>
+                    <li><a href="https://sdaglish.github.io/category/misc.html">misc</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
-<section id="content" class="body">
-<h1>Archives for My Embedded Electronics Blog</h1>
 
-<dl>
-    <dt>Wed 19 February 2020</dt>
-    <dd><a href="./developing_pic24_projects_using_the_command_line.html">Developing PIC24 Projects using the Command Line</a></dd>
-</dl>
+<section id="content" class="body">
+    <h1>Tags for My Embedded Electronics Blog</h1>
+    <ul>
+        <li><a href="https://sdaglish.github.io/tag/command-line.html">command-line</a> (1)</li>
+        <li><a href="https://sdaglish.github.io/tag/pic.html">pic</a> (1)</li>
+        <li><a href="https://sdaglish.github.io/tag/pic24.html">pic24</a> (1)</li>
+    </ul>
 </section>
+
         <section id="extras" class="body">
                 <div class="blogroll">
                         <h2>links</h2>
@@ -34,6 +37,7 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
+                            <li><a href="https://sdaglish.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="#">You can add links in your config file</a></li>
                             <li><a href="#">Another social link</a></li>
