Generate Pelican site

--- a/developing_pic24_projects_using_the_command_line.html
+++ b/developing_pic24_projects_using_the_command_line.html
@@ -37,29 +37,29 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgcc134d5">1. Introduction</a></li>
-<li><a href="#orgdaa9f2a">2. Getting everything together</a>
+<li><a href="#org8d3b1be">1. Introduction</a></li>
+<li><a href="#org795a04e">2. Getting everything together</a>
 <ul>
-<li><a href="#org7051f7e">2.1. Path System Variables</a></li>
-<li><a href="#org990dc23">2.2. Installation</a></li>
+<li><a href="#orgc5e70b4">2.1. Path System Variables</a></li>
+<li><a href="#org3305eef">2.2. Installation</a></li>
 </ul>
 </li>
-<li><a href="#org76c7d3a">3. Adding new files</a>
+<li><a href="#org46e5f34">3. Adding new files</a>
 <ul>
-<li><a href="#org235e980">3.1. Adding files by MPLAB X IDE</a></li>
-<li><a href="#org1178e69">3.2. Adding files without the IDE</a></li>
+<li><a href="#orga53aef1">3.1. Adding files by MPLAB X IDE</a></li>
+<li><a href="#org838222c">3.2. Adding files without the IDE</a></li>
 </ul>
 </li>
-<li><a href="#orgbd02123">4. Compiling the firmware</a></li>
-<li><a href="#orgf802480">5. Flashing the firmware</a></li>
-<li><a href="#orgbdbcb90">6. Wrapping it up</a></li>
+<li><a href="#orgce61b2a">4. Compiling the firmware</a></li>
+<li><a href="#org7948145">5. Flashing the firmware</a></li>
+<li><a href="#org36914aa">6. Wrapping it up</a></li>
 </ul>
 </div>
 </div>
 
 
-<div id="outline-container-orgcc134d5" class="outline-2">
-<h2 id="orgcc134d5"><span class="section-number-2">1</span> Introduction</h2>
+<div id="outline-container-org8d3b1be" class="outline-2">
+<h2 id="org8d3b1be"><span class="section-number-2">1</span> Introduction</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 In both my professional and private projects, I use Microchip's PIC microprocessors A LOT. In fact, at the time of writing, I have about 10 different projects on the go at the same time, all of which are using different PICs (mainly PIC16 and PIC24s).
@@ -121,16 +121,16 @@ A couple of things to note:
 </div>
 </div>
 
-<div id="outline-container-orgdaa9f2a" class="outline-2">
-<h2 id="orgdaa9f2a"><span class="section-number-2">2</span> Getting everything together</h2>
+<div id="outline-container-org795a04e" class="outline-2">
+<h2 id="org795a04e"><span class="section-number-2">2</span> Getting everything together</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 As mentioned above, I'm using Windows 10. I have the same setup working fine on Windows 7. I will probably do some testing on a Linux VM at some point. I have no means of testing things on a Mac machine (please let me know if you're a Mac user and have any experience with a similar setup as I'd be interested to know how things are different / similar).
 </p>
 </div>
 
-<div id="outline-container-org7051f7e" class="outline-3">
-<h3 id="org7051f7e"><span class="section-number-3">2.1</span> Path System Variables</h3>
+<div id="outline-container-orgc5e70b4" class="outline-3">
+<h3 id="orgc5e70b4"><span class="section-number-3">2.1</span> Path System Variables</h3>
 <div class="outline-text-3" id="text-2-1">
 <p>
 The PATH system variable will need to be updated to include a couple of MPLAB files.
@@ -152,8 +152,8 @@ Of course, this will massively depend on your system setup.
 </div>
 </div>
 
-<div id="outline-container-org990dc23" class="outline-3">
-<h3 id="org990dc23"><span class="section-number-3">2.2</span> Installation</h3>
+<div id="outline-container-org3305eef" class="outline-3">
+<h3 id="org3305eef"><span class="section-number-3">2.2</span> Installation</h3>
 <div class="outline-text-3" id="text-2-2">
 <p>
 Despite trying to not use MPLAB, for this setup, you will need to install MPLAB X <a href="https://www.microchip.com/mplab/mplab-x-ide">here</a>. At the time of writing, the latest version is v5.30, but as we aren't using much of MPLAB, the instructions below should work on most versions (I'll update the instructions if I find anything breaks).
@@ -175,16 +175,16 @@ Once you're all set up, open up MPLAB X and create your project as you would for
 </div>
 
 
-<div id="outline-container-org76c7d3a" class="outline-2">
-<h2 id="org76c7d3a"><span class="section-number-2">3</span> Adding new files</h2>
+<div id="outline-container-org46e5f34" class="outline-2">
+<h2 id="org46e5f34"><span class="section-number-2">3</span> Adding new files</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 When adding new files to an PIC project, you can either use the MPLAB IDE or you can add them manually by editing nbproject/configurations.xml . Both work well, depending on your needs.
 </p>
 </div>
 
-<div id="outline-container-org235e980" class="outline-3">
-<h3 id="org235e980"><span class="section-number-3">3.1</span> Adding files by MPLAB X IDE</h3>
+<div id="outline-container-orga53aef1" class="outline-3">
+<h3 id="orga53aef1"><span class="section-number-3">3.1</span> Adding files by MPLAB X IDE</h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 When setting up a new project with MPLAB, I will often use the IDE to create the main.c file. The reasons I do this are:
@@ -204,8 +204,8 @@ After I've done the above, I will often close the IDE and start working on the c
 </div>
 </div>
 
-<div id="outline-container-org1178e69" class="outline-3">
-<h3 id="org1178e69"><span class="section-number-3">3.2</span> Adding files without the IDE</h3>
+<div id="outline-container-org838222c" class="outline-3">
+<h3 id="org838222c"><span class="section-number-3">3.2</span> Adding files without the IDE</h3>
 <div class="outline-text-3" id="text-3-2">
 <p>
 It is possible to add files to the project without using the IDE. All the information we need is contained with the file nbproject\configurations.xml
@@ -285,8 +285,8 @@ If the generator was successful, you can then call <code>make</code> in the proj
 </div>
 
 
-<div id="outline-container-orgbd02123" class="outline-2">
-<h2 id="orgbd02123"><span class="section-number-2">4</span> Compiling the firmware</h2>
+<div id="outline-container-orgce61b2a" class="outline-2">
+<h2 id="orgce61b2a"><span class="section-number-2">4</span> Compiling the firmware</h2>
 <div class="outline-text-2" id="text-4">
 <p>
 Once you have the files added to your project and the new Makefile, compiling the software is pretty simple by typing <code>make</code> from within the project home folder. 
@@ -302,8 +302,8 @@ Typing in <code>make</code> and pressing return, you should have the same output
 </div>
 </div>
 
-<div id="outline-container-orgf802480" class="outline-2">
-<h2 id="orgf802480"><span class="section-number-2">5</span> Flashing the firmware</h2>
+<div id="outline-container-org7948145" class="outline-2">
+<h2 id="org7948145"><span class="section-number-2">5</span> Flashing the firmware</h2>
 <div class="outline-text-2" id="text-5">
 <p>
 This one is a bit more difficult, as it depends on what you're using to flash the device, and what device you are flashing.
@@ -350,8 +350,8 @@ As I am very likely to make a mistake with the above command line, I'll normally
 </div>
 </div>
 
-<div id="outline-container-orgbdbcb90" class="outline-2">
-<h2 id="orgbdbcb90"><span class="section-number-2">6</span> Wrapping it up</h2>
+<div id="outline-container-org36914aa" class="outline-2">
+<h2 id="org36914aa"><span class="section-number-2">6</span> Wrapping it up</h2>
 <div class="outline-text-2" id="text-6">
 <p>
 Following the above should give you a minimum setup needed to develop PIC24 devices using the command line. I use this setup daily, but with a few additions for unit testing and for my Vim interaction's (both of which I'll discuss another time).
