--- a/developing_pic24_projects_using_the_command_line.html
+++ b/developing_pic24_projects_using_the_command_line.html
@@ -138,29 +138,29 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orge7c4c61">1. Introduction</a></li>
-<li><a href="#orgf99fed9">2. Getting everything together</a>
+<li><a href="#orgadda1bd">1. Introduction</a></li>
+<li><a href="#orgdc8b102">2. Getting everything together</a>
 <ul>
-<li><a href="#org2c3c10d">2.1. Path System Variables</a></li>
-<li><a href="#org1a52561">2.2. Installation</a></li>
+<li><a href="#org6f7c890">2.1. Path System Variables</a></li>
+<li><a href="#org41e1578">2.2. Installation</a></li>
 </ul>
 </li>
-<li><a href="#org736d036">3. Adding new files</a>
+<li><a href="#orgf79a520">3. Adding new files</a>
 <ul>
-<li><a href="#org26a3384">3.1. Adding files by MPLAB X IDE</a></li>
-<li><a href="#orgb0eb5d0">3.2. Adding files without the IDE</a></li>
+<li><a href="#orgc85510f">3.1. Adding files by MPLAB X IDE</a></li>
+<li><a href="#org8c097a2">3.2. Adding files without the IDE</a></li>
 </ul>
 </li>
-<li><a href="#org9c88abd">4. Compiling the firmware</a></li>
-<li><a href="#orgc5545bf">5. Flashing the firmware</a></li>
-<li><a href="#orgc3f223a">6. Wrapping it up</a></li>
+<li><a href="#org7d2bcf9">4. Compiling the firmware</a></li>
+<li><a href="#org996130a">5. Flashing the firmware</a></li>
+<li><a href="#org40f4d4f">6. Wrapping it up</a></li>
 </ul>
 </div>
 </div>
 
 
-<div id="outline-container-orge7c4c61" class="outline-2">
-<h2 id="orge7c4c61"><span class="section-number-2">1</span> Introduction</h2>
+<div id="outline-container-orgadda1bd" class="outline-2">
+<h2 id="orgadda1bd"><span class="section-number-2">1</span> Introduction</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 In both my professional and private projects, I use Microchip's PIC microprocessors A LOT. In fact, at the time of writing, I have about 10 different projects on the go at the same time, all of which are using different PICs (mainly PIC16 and PIC24s).
@@ -222,16 +222,16 @@ A couple of things to note:
 </div>
 </div>
 
-<div id="outline-container-orgf99fed9" class="outline-2">
-<h2 id="orgf99fed9"><span class="section-number-2">2</span> Getting everything together</h2>
+<div id="outline-container-orgdc8b102" class="outline-2">
+<h2 id="orgdc8b102"><span class="section-number-2">2</span> Getting everything together</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 As mentioned above, I'm using Windows 10. I have the same setup working fine on Windows 7. I will probably do some testing on a Linux VM at some point. I have no means of testing things on a Mac machine (please let me know if you're a Mac user and have any experience with a similar setup as I'd be interested to know how things are different / similar).
 </p>
 </div>
 
-<div id="outline-container-org2c3c10d" class="outline-3">
-<h3 id="org2c3c10d"><span class="section-number-3">2.1</span> Path System Variables</h3>
+<div id="outline-container-org6f7c890" class="outline-3">
+<h3 id="org6f7c890"><span class="section-number-3">2.1</span> Path System Variables</h3>
 <div class="outline-text-3" id="text-2-1">
 <p>
 The PATH system variable will need to be updated to include a couple of MPLAB files.
@@ -253,8 +253,8 @@ Of course, this will massively depend on your system setup.
 </div>
 </div>
 
-<div id="outline-container-org1a52561" class="outline-3">
-<h3 id="org1a52561"><span class="section-number-3">2.2</span> Installation</h3>
+<div id="outline-container-org41e1578" class="outline-3">
+<h3 id="org41e1578"><span class="section-number-3">2.2</span> Installation</h3>
 <div class="outline-text-3" id="text-2-2">
 <p>
 Despite trying to not use MPLAB, for this setup, you will need to install MPLAB X <a href="https://www.microchip.com/mplab/mplab-x-ide">here</a>. At the time of writing, the latest version is v5.30, but as we aren't using much of MPLAB, the instructions below should work on most versions (I'll update the instructions if I find anything breaks).
@@ -276,16 +276,16 @@ Once you're all set up, open up MPLAB X and create your project as you would for
 </div>
 
 
-<div id="outline-container-org736d036" class="outline-2">
-<h2 id="org736d036"><span class="section-number-2">3</span> Adding new files</h2>
+<div id="outline-container-orgf79a520" class="outline-2">
+<h2 id="orgf79a520"><span class="section-number-2">3</span> Adding new files</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 When adding new files to an PIC project, you can either use the MPLAB IDE or you can add them manually by editing nbproject/configurations.xml . Both work well, depending on your needs.
 </p>
 </div>
 
-<div id="outline-container-org26a3384" class="outline-3">
-<h3 id="org26a3384"><span class="section-number-3">3.1</span> Adding files by MPLAB X IDE</h3>
+<div id="outline-container-orgc85510f" class="outline-3">
+<h3 id="orgc85510f"><span class="section-number-3">3.1</span> Adding files by MPLAB X IDE</h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 When setting up a new project with MPLAB, I will often use the IDE to create the main.c file. The reasons I do this are:
@@ -305,8 +305,8 @@ After I've done the above, I will often close the IDE and start working on the c
 </div>
 </div>
 
-<div id="outline-container-orgb0eb5d0" class="outline-3">
-<h3 id="orgb0eb5d0"><span class="section-number-3">3.2</span> Adding files without the IDE</h3>
+<div id="outline-container-org8c097a2" class="outline-3">
+<h3 id="org8c097a2"><span class="section-number-3">3.2</span> Adding files without the IDE</h3>
 <div class="outline-text-3" id="text-3-2">
 <p>
 It is possible to add files to the project without using the IDE. All the information we need is contained with the file nbproject\configurations.xml
@@ -386,8 +386,8 @@ If the generator was successful, you can then call <code>make</code> in the proj
 </div>
 
 
-<div id="outline-container-org9c88abd" class="outline-2">
-<h2 id="org9c88abd"><span class="section-number-2">4</span> Compiling the firmware</h2>
+<div id="outline-container-org7d2bcf9" class="outline-2">
+<h2 id="org7d2bcf9"><span class="section-number-2">4</span> Compiling the firmware</h2>
 <div class="outline-text-2" id="text-4">
 <p>
 Once you have the files added to your project and the new Makefile, compiling the software is pretty simple by typing <code>make</code> from within the project home folder. 
@@ -403,8 +403,8 @@ Typing in <code>make</code> and pressing return, you should have the same output
 </div>
 </div>
 
-<div id="outline-container-orgc5545bf" class="outline-2">
-<h2 id="orgc5545bf"><span class="section-number-2">5</span> Flashing the firmware</h2>
+<div id="outline-container-org996130a" class="outline-2">
+<h2 id="org996130a"><span class="section-number-2">5</span> Flashing the firmware</h2>
 <div class="outline-text-2" id="text-5">
 <p>
 This one is a bit more difficult, as it depends on what you're using to flash the device, and what device you are flashing.
@@ -451,14 +451,103 @@ As I am very likely to make a mistake with the above command line, I'll normally
 </div>
 </div>
 
-<div id="outline-container-orgc3f223a" class="outline-2">
-<h2 id="orgc3f223a"><span class="section-number-2">6</span> Wrapping it up</h2>
+<div id="outline-container-org40f4d4f" class="outline-2">
+<h2 id="org40f4d4f"><span class="section-number-2">6</span> Wrapping it up</h2>
 <div class="outline-text-2" id="text-6">
 <p>
 Following the above should give you a minimum setup needed to develop PIC24 devices using the command line. I use this setup daily, but with a few additions for unit testing and for my Vim interaction's (both of which I'll discuss another time).
 </p>
 </div>
 </div>
+
+			<style>
+#pcs-comment-form input,
+#pcs-comment-form textarea {
+	width: 100%;
+}
+#pcs-comment-form-display-replyto {
+	border: solid 1px black;
+	padding: 2px;
+}
+#pcs-comment-form-display-replyto p {
+	margin-top: 0.5em;
+	margin-bottom: 0.5em;
+}
+#pcs-comments ul {
+	list-style: none;
+}
+#pcs-comments .comment-left {
+	display: table-cell;
+	padding-right: 10px;
+}
+#pcs-comments .comment-body {
+	display: table-cell;
+	vertical-align: top;
+	width: 100%;
+}
+</style>
+
+	<section id="pcs-comments">
+	<header>
+		<h2>Comments</h2>
+		<hr/>
+	</header>
+		<p>There are no comments yet.</p>
+	<section>
+	<form id="pcs-comment-form" action="#">
+		<legend>Add a Comment</legend>
+		<input type="hidden" id="pcs-comment-form-input-replyto">
+		<fieldset>
+			<label for="pcs-comment-form-input-name">Name</label>
+			<input  id="pcs-comment-form-input-name" type="text" placeholder="Enter your name or nickname" />
+		</fieldset>
+		<fieldset>
+			<label for="pcs-comment-form-input-website">Website</label>
+			<input  id="pcs-comment-form-input-website" type="text" placeholder="Enter your website (optional)" />
+		</fieldset>
+		<fieldset>
+			<label   for="pcs-comment-form-input-textarea">Your Comment</label>
+			<textarea id="pcs-comment-form-input-textarea" rows="5" style="resize:vertical;" placeholder="Your comment"></textarea>
+			<p>You can use the <a href="https://en.wikipedia.org/wiki/Markdown">Markdown</a> syntax to format your comment.</p>
+			<div style="display: none; " id="pcs-comment-form-display-replyto"></div>
+		</fieldset>
+
+		<button type="submit"
+				id="pcs-comment-form-button-submit"
+				>Post via email</button>
+
+			<a href="https://sdaglish.github.io/feeds/comment.developing_pic24_projects_using_the_command_line.atom.xml">
+				Comment Atom Feed
+			</a>
+	</form>
+</section>
+
+</section>
+
+			<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+	<script type="text/javascript" src="https://sdaglish.github.io/theme/js/comments.js"></script>
+	<script type="text/javascript">
+		$(document).ready(function() {
+			CommentSystem.email_user   = "s.c.daglish";
+			CommentSystem.email_domain = "gmail.com";
+			CommentSystem.display_replyto_html = function(comment_content, article_slug, author) { 
+				return ''
+					+ '<button style="float:right;" onclick="CommentSystem.cancelReply(); return false;" title="Cancel the reply">'
+					+ 	'×'
+					+ '</button>'
+					+ '<p>This comment will be posted as a reply to \'<a title="'+comment_content+'" href="#comment-'+article_slug+'">'+author+'</a>\'</p>';
+			};
+
+			$('#pcs-comment-form').on("submit",
+				function( event )
+				{
+					event.preventDefault();
+					$(location).attr('href', CommentSystem.getMailtoLink("developing_pic24_projects_using_the_command_line"));
+				}
+			);
+		});
+	</script>
+
 
             </section>
 
